test/bad/fieldpolicy/StaticFieldGiveIntToPolicy.para

public class StaticFieldFromStaticFieldLowToHigh {
    public static final policy high = 1;
}
